Fixed few spacing issues

--- a/public/scss/sections/_portfolio.scss
+++ b/public/scss/sections/_portfolio.scss
@@ -81,9 +81,12 @@
 
     &__content {
         position: relative;
+        min-height: 310px;
+        @include flexbox($justify-content: space-between , $flex-direction: column);
     }
 
     &__techno {
+        width: 100%; 
         text-align: center;
     }
 
